# DataBox

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  build_sidecar.py  databox_agent_kernel_checkpoints.sqlite  databox_agent_kernel_checkpoints.sqlite-shm  databox_agent_kernel_checkpoints.sqlite-wal  databox_demo.db  databox_local.db  diff_tests.txt  log.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run_desktop.py  start.py  walkthrough_22nd_round.md  第一版.md
.agent_eval/: .gitignore  README.md  analyze_dev_json.py  build_eval_base_db.py  build_spider_dev_subset.py  cases.smoke_subset.json  check_eval_backend.py  check_eval_env.py  compare_eval_runs.py  config.example.json  config.local.example.json  datasource_map.json  dev50_failure_dossier.py  docker-compose.spider.yml  eval_common.py  eval_report.md  eval_summary.json  import_multi_spider_mysql.py  import_report.json  inspect_eval_mismatches.py  list_eval_outputs.py  preflight_spider_gold_sql.py  prompts.quick_verify.json  prompts.spider.dev50.json  prompts.spider.smoke.json  quick_agent_run.py  quick_spider_cases.json  remaining_failure_dossier.py  report.py  run_agent_eval.py  run_p1_targeted.ps1  search_order_by.py  semantic_ablation_report.py  semantic_candidate_report.py  semantic_gap_report.py  setup_datasources.py  setup_spider.py  spider_import_mysql.py  spider_sql_canonicalizer.py  start_eval_backend.py  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
(+1081 files in other folders)
